# leafeon-python-template-repository

./: .pdm-python  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: makefile.yml
source/: main.py
source/tests/: test_component.py  test_main.py
source/utility/: component.py
