[project]
name = "Leafeon"
version = "0.0.0"
description = "A brief description of what your project does."
authors = [{ name = "Your Name", email = "youremail@example.com" }]
requires-python = ">=3.8"

# Specify license via a LICENSE file
license = { file = "LICENSE" }

[project.dependencies]
flask = "^1.1.2"
requests = "^2.25.1"

[project.optional-dependencies]
dev = [
    "pytest>=6.0,<7",
    "black==20.8b1",
    "flake8>=3.8,<4"
]

[tool.pdm]
python_requires = ">=3.8"